--- a/index.html
+++ b/index.html
@@ -196,19 +196,19 @@
         <h2>취미</h2>
         <div class="hobby-gallery">
             <div class="hobby-item">
-                <img src="전시회.jpg" alt="전시회">
+                <img src="exhibition.jpg" alt="전시회">
                 <p>전시회</p>
             </div>
             <div class="hobby-item">
-                <img src="커피.jpg" alt="커피">
+               <img src="coffee.jpg" alt="커피">
                 <p>커피</p>
             </div>
             <div class="hobby-item">
-                <img src="여행.jpg" alt="여행">
+                <img src="travel.jpg" alt="여행">
                 <p>여행</p>
             </div>
             <div class="hobby-item">
-                <img src="음악.jpg" alt="음악">
+                <img src="music.jpg" alt="음악">
                 <p>음악</p>
             </div>
         </div>
